# GoldFish_CLI

./: LICENSE.txt  README.md  analytics.cpp  main.cpp  packet_analyzer_engine.cpp  pcapanalyzerapp.cpp  pcapanalyzerapp.h  pcapfilereader.cpp  protocol_layers.h  protocol_parser_factory.h  protocol_parsers.cpp  reportdata.cpp  reportdata.h  statisticsheader.h
GoldFish_CLI/: CMakeLists.txt  analytics.h  commconfig.cpp  commconfig.h  flowaggregator.cpp  flowaggregator.h  otherpacketstats.h  packet_analyzer_engine.h  packet_info_extended.h  pcapfilereader.h  psnchartheader.h
docs/: SOURCE_STRUCTURE.md
